--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ seaborn~=0.10.1
 numpy~=1.18.5
 scipy~=1.4.1
 matplotlib~=3.2.1
-librosa~=0.7.2
+librosa==0.7.2
 pandas~=1.0.4
 psycopg2==2.8.5
 django~=3.0.7
 djangorestframework~=3.11.0
+numba==0.48.0
