--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
-DEBUG=1
-SECRET_KEY=foo
+DEBUG=0
+SECRET_KEY=foo_key
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql_psycopg2
 SQL_DATABASE=postgres
