--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ language: python
 
 script:
   - python -m pytest -v
-  - docker-compose run web python manage.py test
+  - docker-compose exec web python manage.py test
 
 after_success:
   - sh .travis/deploy_dockerhub.sh
