--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ language: python
 
 script:
   - python -m pytest -v
-  - docker-compose exec web python manage.py test
-
+  - python manage.py test music_api
 after_success:
   - sh .travis/deploy_dockerhub.sh
   - test “$TRAVIS_BRANCH” = “master” && sh .travis/deploy_heroku.sh
