--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,11 @@ services:
 
 language: python
 
+python:
+  - 3.6
+
 script:
-  - python manage.py test
+  - python manage.py test music_api
 
 after_success:
   - sh .travis/deploy_dockerhub.sh
