Return back only modul tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - 3.6
 
 script:
-  - python manage.py test music_api
+  - python -m pytest -v
 
 after_success:
   - sh .travis/deploy_dockerhub.sh
