--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,16 @@ script:
 
 after_script:
   - docker-compose down
+
+after_success:
+  - docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+  - docker tag back $DOCKER_USER/back:$TRAVIS_BUILD_NUMBER
+  - docker push $DOCKER_USER/back:$TRAVIS_BUILD_NUMBER
+  - docker tag back $DOCKER_USER/back:latest
+  - docker push $DOCKER_USER/back:latest
+
+deploy:
+  provider: heroku
+  api_key:
+    secure: ac593baf-0fb9-45ec-8ad1-b73a166c0f7a
+  app: mus-trans
