--- a/heroku.yml
+++ b/heroku.yml
@@ -1,11 +1,9 @@
-setup:
-  addons:
-    - plan: heroku-postgres
-      as: DATABASE
 build:
   docker:
     web: Dockerfile
-release:
-  python manage.py migrate
 run:
-  gunicorn hyper_music.wsgi
+  web: gunicorn hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+release:
+  image: web
+  command:
+    - python manage.py migrate --noinput
