--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,6 @@
 build:
   docker:
     web: Dockerfile
+    nginx: ./nginx/Dockerfile
 run:
   web: gunicorn hyper_music.wsgi:application --bind 0.0.0.0:$PORT
-release:
-  image: web
-  command:
-    - python manage.py migrate --noinput
