Remove creating DB

--- a/heroku.yml
+++ b/heroku.yml
@@ -4,4 +4,4 @@ build:
     nginx: ./nginx/Dockerfile
 
 run:
-  web: gunicorn hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
