--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,8 @@ before_script:
 - pip install docker-compose
 - docker-compose up -d --build
 - docker-compose exec web python manage.py migrate
-- psql -c 'create database travis_ci_test;' -U postgres
 script:
-- docker-compose exec web python manage.py test
+#- docker-compose exec web python manage.py test
 - python -m pytest -v
 after_script:
 - docker-compose down
