--- a/heroku.yml
+++ b/heroku.yml
@@ -4,4 +4,5 @@ build:
     nginx: ./nginx/Dockerfile
 
 run:
-  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web: docker-compose up
+  db: docker-compose exec web python manage.py migrate
