--- a/heroku.yml
+++ b/heroku.yml
@@ -1,6 +1,9 @@
 build:
   docker:
-    web: docker-compose up
-
+    web: Dockerfile
+    nginx: ./nginx/Dockerfile
 run:
-  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web:
+    - docker-compose up
+#    - gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+    - python manage.py migrate
