--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,10 @@ server {
         alias /code/media/;
     }
 
+    location /staticfiles/ {
+        alias /code/staticfiles/;
+    }
+
     location / {
         proxy_pass http://hyper_music;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
