--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     command: gunicorn hyper_music.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - media_volume:/code/media
+      - static_volume:/code/staticfiles
     expose:
       - 8000
     env_file:
@@ -23,6 +24,7 @@ services:
     build: ./nginx
     volumes:
     - media_volume:/code/media
+    - static_volume:/code/staticfiles
     ports:
       - 8000:80
     depends_on:
@@ -31,3 +33,4 @@ services:
 volumes:
   postgres_data:
   media_volume:
+  static_volume:
