--- a/heroku.yml
+++ b/heroku.yml
@@ -1,9 +1,10 @@
+setup:
+  addons: heroku-postgresql
+
 build:
   docker:
     web: Dockerfile
     nginx: ./nginx/Dockerfile
 run:
   web:
-    - docker-compose up
-#    - gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
-    - python manage.py migrate
+    - gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
