--- a/heroku.yml
+++ b/heroku.yml
@@ -2,5 +2,4 @@ build:
   docker:
     web: docker-compose.yml
 run:
-  web:
-    - gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
