--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,5 @@
-build:
-  docker:
-    web: docker-compose.yml
 run:
-  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web:
+    - "docker-compose up -d --build"
+    - "docker-compose up"
+    - "docker-compose exec web python manage.py migrate"
