Remove heroku.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,3 +31,7 @@ deploy:
   on:
     repo: coolcrazycool/music_transcription
     branch: master
+  run:
+    - "docker-compose up -d --build"
+    - "docker-compose up"
+    - "docker-compose exec web python manage.py migrate"
