--- a/heroku.yml
+++ b/heroku.yml
@@ -1,4 +1,5 @@
+build:
+  docker:
+    web: Dockerfile
 run:
-  web:
-    - docker-compose up
-    - docker-compose exec web python manage.py migrate
+  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
