--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
 - docker-compose exec web python manage.py migrate
 script:
 #- docker-compose exec web python manage.py test
-- python -m pytest -v
+#- python -m pytest -v
 deploy:
   provider: heroku
   api_key:
