--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,38 @@
 sudo: false
+
 language: python
+
 cache: pip
+
 python:
-- '3.6'
+  - '3.6'
+  -
 addons:
   postgresql: '13'
+
 services:
 - docker
 - postgresql
+-
 env: DOCKER_COMPOSE_VERSION=1.4.2
+
 install:
 - pip install -r requirements.txt
+
 branches:
   only:
   - master
+  - onemore_tests
+
 before_script:
-- pip install docker-compose
-- docker-compose up -d --build
-- docker-compose exec web python manage.py migrate
+  - pip install docker-compose
+  - docker-compose up -d --build
+  - docker-compose exec web python manage.py migrate
+
 script:
-#- docker-compose exec web python manage.py test
-#- python -m pytest -v
+  #- docker-compose exec web python manage.py test
+  - python -m pytest -v
+
 deploy:
   provider: heroku
   api_key:
