--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream django{
+    server mus-trans;
+}
+
 server {
 
     listen $PORT;
@@ -8,7 +12,7 @@ server {
     }
 
     location / {
-        proxy_pass http://hyper_music;
+        proxy_pass http://mus-trans;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
