--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,3 @@
-upstream django{
-    server mus-trans;
-}
-
 server {
 
     listen $PORT;
@@ -11,8 +7,12 @@ server {
         alias /code/media/;
     }
 
+    location /staticfiles/ {
+        alias /code/staticfiles/;
+    }
+
     location / {
-        proxy_pass http://django;
+        proxy_pass http://mus-trans;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
