--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
     env_file:
       - ./.env.prod.db
   web:
-    build: .
-    command: gunicorn hyper_music.wsgi:application --bind 0.0.0.0:8000
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: gunicorn -w 4 hyper_music.wsgi:application -b :8000
     volumes:
       - media_volume:/code/media
       - static_volume:/code/staticfiles
@@ -21,12 +23,14 @@ services:
     depends_on:
       - db
   nginx:
-    build: ./nginx
+    build:
+      context: .
+      dockerfile: ./nginx/Dockerfile
     volumes:
     - media_volume:/code/media
     - static_volume:/code/staticfiles
     ports:
-      - 8000:80
+      - 80:80
     depends_on:
       - web
 
