--- a/heroku.yml
+++ b/heroku.yml
@@ -3,4 +3,4 @@ build:
     web: Dockerfile
     nginx: ./nginx/Dockerfile
 run:
-  web: gunicorn -w 4 hyper_music.wsgi:application --bind 0.0.0.0:$PORT
+  web: gunicorn -w 4 hyper_music.wsgi:application -b :$PORT
