--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location / {
-        proxy_pass http://mus-trans;
+        proxy_pass http://http://mus-trans.herokuapp.com;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
