--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,7 @@ services:
     depends_on:
       - db
   nginx:
-    build:
-      context: .
-      dockerfile: ./nginx/Dockerfile
+    build: ./nginx/
     volumes:
     - media_volume:/code/media
     - static_volume:/code/staticfiles
