--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,18 @@
+upstream mus-trans{
+    server mus-trans.herokuapp.com:$PORT
+}
+
 server {
 
     listen $PORT;
     client_max_body_size 256m;
+
+    location / {
+        proxy_pass http://mus-trans;
+        proxy_set_header X-Forwarded-For $host;
+        proxy_set_header Host mus-trans.herokuapp.com;
+        proxy_redirect off;
+    }
 
     location /media/ {
         alias /code/media/;
@@ -9,13 +20,6 @@ server {
 
     location /staticfiles/ {
         alias /code/staticfiles/;
-    }
-
-    location / {
-        proxy_pass http://mus-trans.herokuapp.com;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
     }
 
 }
