--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,14 @@
-upstream mus-trans{
-    server mus-trans.herokuapp.com:$PORT
-}
-
 server {
 
-    listen $PORT;
+    listen 80;
     client_max_body_size 256m;
 
     location / {
-        proxy_pass http://mus-trans;
-        proxy_set_header X-Forwarded-For $host;
-        proxy_set_header Host mus-trans.herokuapp.com;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
+        proxy_pass http://mus-trans.herokuapp.com;
     }
 
     location /media/ {
