--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - pip install docker-compose
   - docker-compose up -d --build
   - docker-compose exec web python manage.py migrate
+  - docker-compose exec web python manage.py collectstatic
 
 script:
   #- docker-compose exec web python manage.py test
