--- a/.env.dev
+++ b/.env.dev
@@ -2,9 +2,9 @@ DEBUG=1
 SECRET_KEY=foo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql_psycopg2
-SQL_DATABASE=postgres
-SQL_USER=postgres
-SQL_PASSWORD=postgres
-SQL_HOST=db
-SQL_PORT=5432
+DATABASE_NAME=postgres
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_HOST=db
+DATABASE_PORT=5432
 DATABASE=postgres
