--- a/docker_compose.dev.yml
+++ b/docker_compose.dev.yml
@@ -17,7 +17,7 @@ services:
     expose:
       - 8000
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     depends_on:
       - db
   nginx:
