--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,8 @@
+upstream hyper_music{
+    server web:8000;
+}
+
+
 server {
 
     listen 80;
@@ -8,7 +13,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
-        proxy_pass http://mus-trans.herokuapp.com;
+        proxy_pass http://hyper_music;
     }
 
     location /media/ {
