--- a/heroku.yml
+++ b/heroku.yml
@@ -2,5 +2,8 @@ build:
   docker:
     web: Dockerfile
     nginx: ./nginx/Dockerfile
+release:
+  image: nginx
+  command: -a mus-trans nginx
 run:
   web: gunicorn -w 4 hyper_music.wsgi:application -b :$PORT
