--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 
 minversion = 3.0
-DJANGO_SETTINGS_MODULE = music_api.settings
-
+DJANGO_SETTINGS_MODULE = hyper_music.settings
+#testpaths = music_api/tests
 python_files = tests.py test_*.py *_tests.py
