Maybe removing slashes helps

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,12 +16,12 @@ server {
         proxy_pass http://hyper_music;
     }
 
-    location /media/ {
-        alias /code/media/;
+    location /media {
+        root /code/media/;
     }
 
-    location /staticfiles/ {
-        alias /code/staticfiles/;
+    location /staticfiles {
+        root /code/staticfiles/;
     }
 
 }
