--- a/heroku.yml
+++ b/heroku.yml
@@ -6,5 +6,6 @@ run:
   web: gunicorn -w 4 hyper_music.wsgi:application -b :$PORT
   nginx:
     command:
+      - pip install docker-compose
       - docker-compose -f docker-compose.yml up -d --build
       - docker-compose -f docker-compose.yml up
