--- a/heroku.yml
+++ b/heroku.yml
@@ -4,6 +4,4 @@ build:
     nginx: ./nginx/Dockerfile
 run:
   web: gunicorn -w 4 hyper_music.wsgi:application -b :$PORT
-  nginx:
-    command:
-      - ./docker-entrypoint.sh nginx -g 'daemon off;'
+  nginx: sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/nginx.conf && nginx -g 'daemon off;'
