--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,14 @@
-upstream hyper_music{
-    server web:8000;
-}
-
-
 server {
 
-    listen 80;
+    listen $PORT;
     client_max_body_size 256m;
 
     location / {
+    proxy_pass http://mus-trans.herokuapp.com;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_redirect off;
-        proxy_pass http://hyper_music;
     }
 
     location /media {
