--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
 server {
 
-    listen $PORT;
+    listen 80;
     client_max_body_size 256m;
 
     location / {
-    proxy_pass http://mus-trans.herokuapp.com;
+        proxy_pass http://mus-trans.herokuapp.com;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -12,11 +12,11 @@ server {
     }
 
     location /media {
-        root /code/media/;
+        alias /code/media/;
     }
 
     location /staticfiles {
-        root /code/staticfiles/;
+        alias /code/staticfiles/;
     }
 
 }
